--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
