Llamada a la API de tmb

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 URL_API_TMB=https://api.tmb.cat/v1/transit/linies/metro/
-APP_KEY=
+APP_ID=a6f6be9a
+APP_KEY=82c6e2040b7ff545d61fcc503444a8c2
 DEBUG=servidor:*
 PORT=4001
